--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.5.1",
     "mongoose-findorcreate": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
