--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "customize-cra": "^1.0.0",
+    "jwt-decode": "^3.1.2",
     "nodemon": "^2.0.19",
     "normalize.css": "^8.0.1",
     "passport": "^0.6.0",
